# ajentix

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: SPEC.md
scripts/: check_deribit_options_data_availability.py  collect_deribit_history.py  collect_pivot_venue_evidence.py  create_stratv2_preregistration.py  gen_edge_demo_fixture.py  gen_stage1_structural_fixture.py  monitor_yields.py  populate_bybit_cache.py  populate_deribit_options_cache.py  rebalance.py  report.py  run_breakeven_analysis.py  run_stage1_gate.py  run_vrp_final_verdict.py  run_vrp_free_final_verdict.py  run_vrp_free_skew_verdict.py  run_vrp_free_walk_forward.py  run_vrp_walk_forward_verdict.py  scan_yields.py  verify_vrp_free_preregistration.py
tests/: test_airdrops_model.py  test_backtest.py  test_backtest_events.py  test_backtest_two_leg.py  test_contracts.py  test_dashboard.py  test_data_cache.py  test_deribit_history_effective_spread_calibration.py  test_final_verdict.py  test_fixture_governance.py  test_g001_redteam.py  test_g003_redteam.py  test_g004_redteam.py  test_g005_redteam.py  test_g006_redteam.py  test_g007_redteam.py  test_g008_redteam.py  test_metrics.py  test_notify.py  test_points.py  test_preregistration.py  test_price_protocol_risk.py  test_rebalance.py  test_risk_engine.py  test_sizing.py  test_sv2_g001_redteam.py  test_sv2_g002_redteam.py  test_sv2_g003_redteam.py  test_sv2_g004_redteam.py  test_venue_evidence.py  test_vrp_breakeven.py  test_vrp_defined_risk.py  test_vrp_defined_risk_usd_eval.py  test_vrp_engine.py  (+11 more)
(+56 files in other folders)
